--- a/src/main/webapp/css/correct.css
+++ b/src/main/webapp/css/correct.css
@@ -12,6 +12,11 @@ html, body {
 	-webkit-tap-highlight-color: transparent;
 	/*修改IE浏览器下的滚滑条样式*/
 	scrollbar-face-color: #CCCCCC;
+	font-family: "微软雅黑";
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 ::-webkit-input-placeholder {
@@ -195,6 +200,7 @@ ul.color_list li {
 	top: 100%;
 	display: none;
 }
+
 /*横条样式*/
 input[type=range] {
 	-webkit-appearance: none;
@@ -224,4 +230,10 @@ input[type=range]::-webkit-slider-thumb {
 	/*设置边框*/
 	box-shadow: 0 .125em .125em #3b4547;
 }
+
 /*添加底部阴影*/
+.annotated {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
